[css] Fix operations toolbar regression  (vertical misalignment) when access is disabled

--- a/client/css/sections/operations/toolbar.css
+++ b/client/css/sections/operations/toolbar.css
@@ -13,6 +13,8 @@
 .operation-toolbar ul li {
     margin-left: 1em;
     list-style: none;
+    display: inline-flex;
+    align-items: center;
 }
 
 .operation-toolbar ul li:first-child {
